fix alignment for "view this course as" dropdown

--- a/static/sass/_courseware.scss
+++ b/static/sass/_courseware.scss
@@ -11,6 +11,11 @@ body.courseware
 		background-color:$gym-dark-grey;
 	}
 
+	.wrapper-preview-menu
+	{
+		margin:20px auto 0;
+	}
+
 	.content-wrapper#content
 	{
 		background-color:$gym-white;
